--- a/sidekiq-warp/templates/index.html
+++ b/sidekiq-warp/templates/index.html
@@ -1,3 +1,5 @@
+{% set process_args = ["beat", "busy", "concurrency", "hostname", "identity", "labels", "pid", "queues", "quiet", "started_at", "tag"] %}
+
 <html>
   <head>
     <title>Sidecliq</title>
@@ -9,64 +11,52 @@
   </head>
   <body>
     <h1>Sidecliq</h1>
+
     <h2>Processes</h2>
-    {% for name, process in processes %}
-      <h3>{{ name }}</h3>
-      <h4>Info</h4>
-      <table>
-        {% for key, value in process.info %}
-          <tr>
-            <td>{{ key }}</td>
-            <td>{{ value }}</td>
-          </tr>
+    <table>
+      <tr>
+        {% for arg in process_args %}
+          <th>{{ arg }}</th>
         {% endfor %}
-      </table>
-      {% if process.workers | length > 0 %}
-        <h4>Jobs</h4>
-        <table>
-          {% for id, data in process.workers %}
-            <tr>
-              <td>{{ id }}</td>
-              <td>{{ data | json_encode }}</td>
-            </tr>
+      </tr>
+      {% for _name, process in processes %}
+        <tr>
+          {% for arg in process_args %}
+            <td>{{ process.info[arg] }}</td>
           {% endfor %}
-        </table>
-      {% endif %}
-    {% endfor %}
+        </tr>
+      {% endfor %}
+    </table>
+
+    <h2>Jobs</h2>
+    <table>
+      {% for _name, process in processes %}
+        {% for id, job in process.workers %}
+        <tr>
+          <td>{{ id }}</td>
+          <td>{{ job | json_encode }}</td>
+        </tr>
+        {% endfor %}
+      {% endfor %}
+    </table>
+
     <h2>Enqueued</h2>
     {% for name, queue in queues %}
       <h3>{{ name }}</h3>
-      <table>
-        {% for job in queue %}
-          <tr>
-            <td>{{ job | json_encode }}</td>
-          </tr>
-        {% endfor %}
-      </table>
+      {% set jobs = queue %}
+      {% include "jobs.html" %}
     {% endfor %}
+
     <h2>Retry</h2>
-    <table>
-      {% for job in retry %}
-        <tr>
-          <td>{{ job | json_encode }}</td>
-        </tr>
-      {% endfor %}
-    </table>
+    {% set jobs = retry %}
+    {% include "jobs.html" %}
+
     <h2>Scheduled</h2>
-    <table>
-      {% for job in schedule %}
-        <tr>
-          <td>{{ job | json_encode }}</td>
-        </tr>
-      {% endfor %}
-    </table>
+    {% set jobs = schedule %}
+    {% include "jobs.html" %}
+
     <h2>Dead</h2>
-    <table>
-      {% for job in dead %}
-        <tr>
-          <td>{{ job | json_encode }}</td>
-        </tr>
-      {% endfor %}
-    </table>
+    {% set jobs = dead %}
+    {% include "jobs.html" %}
   </body>
 </html>
